tests/neg/erased-value-class.scala

class Foo erased (x: Int) extends AnyVal // error

class Bar(x: Int)(y: Int) extends AnyVal // error
